# gaze

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO  configure.sh  gaze.cpp  gaze.default.yaml  gaze.tag  gaze_pipeline.default.yaml  index.html  requirements.txt
cmake/: CTagsTarget.cmake  DocsTarget.cmake  FindBoost.cmake  FindOpenCV.cmake  MessageVariables.cmake  SearchSystemPackage.cmake  TodoTarget.cmake  compile_commands_to_doxyfile_clang.py  gazeConfig.cmake.in  itrackerConfig.cmake.in
docs/: bibliography.bib
include/gaze/: gaze.h  gaze_tracker.h  pipeline.h  pipeline_step.h  pipeline_steps.h  source_capture.h  util.h
include/itracker/: itracker.h
include/where_people_look/: config.h  experiment.h  gui_cb.h
latest/: _formulas.tex  _r_e_a_d_m_e_8md_source.html  annotated.html  bib5355.aux  bib5473.aux  bib6171.aux  citelist.doc5341  citelist.doc5393  citelist.doc6171  citelist.html  class_events.html  classes.html  classgaze_1_1_gaze_tracker-members.html  classgaze_1_1_gaze_tracker.html  classgaze_1_1_pipeline-members.html  classgaze_1_1_pipeline.html  classgaze_1_1_pipeline_step-members.html  classgaze_1_1_pipeline_step.html  classgaze_1_1gui_1_1_debug_window-members.html  classgaze_1_1gui_1_1_debug_window.html  classgaze_1_1gui_1_1_event_manager-members.html  classgaze_1_1gui_1_1_event_manager.html  classgaze_1_1gui_1_1_visualizeable-members.html  classgaze_1_1gui_1_1_visualizeable.html  classgaze_1_1gui_1_1_visualizeable_base-members.html  classgaze_1_1gui_1_1_visualizeable_base.html  classgaze_1_1pipeline_1_1_eye_like-members.html  classgaze_1_1pipeline_1_1_eye_like.html  classgaze_1_1pipeline_1_1_face_landmarks-members.html  classgaze_1_1pipeline_1_1_face_landmarks.html  classgaze_1_1pipeline_1_1_fallback_step-members.html  classgaze_1_1pipeline_1_1_fallback_step.html  classgaze_1_1pipeline_1_1_gaze_capture-members.html  classgaze_1_1pipeline_1_1_gaze_capture.html  classgaze_1_1pipeline_1_1_gaze_point_calculation-members.html  classgaze_1_1pipeline_1_1_gaze_point_calculation.html  classgaze_1_1pipeline_1_1_head_pose_estimation-members.html  classgaze_1_1pipeline_1_1_head_pose_estimation.html  classgaze_1_1pipeline_1_1_pupil_localization-members.html  classgaze_1_1pipeline_1_1_pupil_localization.html  (+116 more)
latest/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+160 more)
src/: gaze.cpp
src/demo/: CMakeLists.txt  gaze_debug_viewer.cpp  where_people_look.cpp
src/demo/gaze_debug_viewer/: CMakeLists.txt  gaze_debug_viewer.cpp
src/demo/simple_tracking/: CMakeLists.txt  simple_tracking.cpp
src/demo/where_people_look/: CMakeLists.txt  config.cpp  experiment.cpp  gui_cb.cpp  where_people_look.cpp  where_people_look.css  where_people_look.gresource.xml  where_people_look.ui
src/gaze/: CMakeLists.txt  gaze.cpp  gaze_tracker.cpp  pipeline.cpp  pipeline_step.cpp  source_capture.cpp
src/gaze/gui/: debug_window.cpp  event_manager.cpp  pipeline_step_widget.cpp
src/gaze/pipeline_steps/: debug_view.cpp  eye_detection.cpp  eye_like.cpp  face_detection.cpp  face_landmarks.cpp  fallback_step.cpp  gaze_capture.cpp  gaze_point_calculation.cpp  head_pose_estimation.cpp  into_the_void_step.cpp  pupil_localization.cpp  source_capture.cpp
src/gaze/util/: config.cpp  config.in.cpp  data.cpp  dlibcv.cpp  pipeline_utils.cpp  utility.cpp
src/itracker/: CMakeLists.txt  itracker.cpp
tests/: CMakeLists.txt
tests/assets/pexels_faces/: 0000.csv  0001.csv  0002.csv  0003.csv  0004.csv  0005.csv  0006.csv  0007.csv  0008.csv  0009.csv  0010.csv  0011.csv  0012.csv  0013.csv  0014.csv  0015.csv  0017.csv  0018.csv  0019.csv  0021.csv  0022.csv  0024.csv  0025.csv  0026.csv  0027.csv  0028.csv  0030.csv  0031.csv  0032.csv  0034.csv  0035.csv  0036.csv  0037.csv  0039.csv  0040.csv  0044.csv  0046.csv  0048.csv  0049.csv  0050.csv  (+46 more)
tests/pipeline_steps/: pupil_localization.cpp
thesis/: _formulas.tex  class_events.html  classgaze_1_1_gaze_tracker-members.html  classgaze_1_1_gaze_tracker.html  classgaze_1_1_pipeline-members.html  classgaze_1_1_pipeline_step-members.html  classgaze_1_1_pipeline_step.html  classgaze_1_1gui_1_1_debug_window.html  classgaze_1_1gui_1_1_visualizeable_base.html  classgaze_1_1pipeline_1_1_face_landmarks-members.html  classgaze_1_1pipeline_1_1_face_landmarks.html  classgaze_1_1pipeline_1_1_fallback_step-members.html  classgaze_1_1pipeline_1_1_gaze_capture-members.html  classgaze_1_1pipeline_1_1_gaze_point_calculation.html  classgaze_1_1pipeline_1_1_pupil_localization.html  classgaze_1_1pipeline_1_1_source_capture-members.html  classitracker_1_1_i_tracker-members.html  classitracker_1_1_i_tracker.html  classwpl_1_1_config.html  classwpl_1_1_experiment-members.html  config_8in_8cpp_source.html  data_8cpp_source.html  debug__window_8h_source.html  dir_25d03f84b58717113c934acd3bb7d176.html  dir_82952f9a0c6d7b13fd3cae3720864b25.html  dir_899b88c3877b96312df4fc8c67d2b265.html  dir_8eef2932a6597de779b657864daaacc5.html  dir_b6f340b410c84040e1c3e0fbf05f52e5.html  dir_c46cb3223559d6c83e592d78a3316fa8.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.html  dir_ee1044f94e919047e58e74dd18f60018.html  dir_fc1ab1e3ef5cc41f53ed73a231ff7c72.html  dlibcv_8cpp_source.html  dlibcv_8h_source.html  event__manager_8cpp_source.html  experiment_8cpp_source.html  face__landmarks_8cpp_source.html  fallback__step_8cpp_source.html  fallback__step_8h_source.html  (+45 more)
thesis/search/: all_0.js  all_10.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1b.js  all_2.js  all_7.js  all_8.js  all_c.js  classes_12.js  classes_14.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  enums_0.js  (+110 more)
(+25 files in other folders)
